# Copyright © SixtyFPS GmbH <info@slint.dev>
# SPDX-License-Identifier: MIT

[package]
name = "gallery"
version = "1.13.0"
authors = ["Slint Developers <info@slint.dev>"]
edition = "2021"
build = "build.rs"
license = "MIT"
publish = false
description = "Slint Widgets Gallery Example"

[[bin]]
path = "main.rs"
name = "gallery"

[dependencies]
slint = { path = "../../api/rs/slint", features = ["gettext"] }

[build-dependencies]
slint-build = { path = "../../api/rs/build" }