# Copyright © SixtyFPS GmbH <info@slint.dev>
# SPDX-License-Identifier: MIT

[package]
name = "gallery"
version = "1.13.0"
authors = ["Slint Developers <info@slint.dev>"]
edition = "2021"
build = "build.rs"
license = "MIT"
publish = false
description = "Slint Widgets Gallery Example"

[[bin]]
path = "main.rs"
name = "gallery"

[dependencies]
slint = { git = "https://github.com/PorQ-Pine/slint.git", features = ["gettext", "log"], default-features = false }

[build-dependencies]
slint-build = { git = "https://github.com/PorQ-Pine/slint.git" }

[features]
host = [
    "slint/accessibility",
    "slint/backend-default",
    "slint/compat-1-2",
    "slint/renderer-femtovg",
    "slint/renderer-software",
    "slint/std",
]
pinenote = ["slint/compat-1-2", "slint/backend-linuxkms-noseat", "slint/libm", "slint/renderer-software"]