# Copyright © SixtyFPS GmbH <info@slint.dev>
# SPDX-License-Identifier: MIT

[package]
name = "gallery"
version = "1.0.0"
authors = ["Slint Developers <info@slint.dev>"]
edition = "2021"
build = "build.rs"
license = "MIT"
publish = false
description = "Slint Widgets Gallery Example"

[[bin]]
path = "main.rs"
name = "gallery"

[dependencies]
slint = { git = "https://github.com/slint-ui/slint.git", rev = "42c683ce2865889eb17848b744c1b941c073ad57", features = ["log"], default-features = false }

[build-dependencies]
slint-build = { git = "https://github.com/slint-ui/slint.git", rev = "42c683ce2865889eb17848b744c1b941c073ad57" }

[features]
host = [
    "slint/accessibility",
    "slint/backend-default",
    "slint/compat-1-2",
    "slint/renderer-femtovg",
    "slint/renderer-software",
    "slint/std",
]
pinenote_rootfs = ["slint/std", "slint/compat-1-2", "slint/backend-linuxkms-noseat", "slint/renderer-femtovg"]
pinenote_initrd = ["slint/compat-1-2", "slint/backend-linuxkms-noseat", "slint/libm", "slint/renderer-software"]